# astrometry

./: .clang-format  .gitignore  .gitmodules  MANIFEST.in  README.md  astrometry.net.patch  prebuild.py  pyproject.toml  setup.py  test.py
.github/workflows/: build_wheels.yml
astrometry/: __init__.py  astrometry_extension_types.pyi  series.py
astrometry_extension/: astrometry_extension.c  astrometry_extension_utilities.h
scripts/: plot_distortion.py
test/: astrosat_stars.json  test_apod4.py  test_astropy.py  test_astrosat.py  test_heavy.py  test_json.py  test_many.py  test_simple.py  test_sip.py
tests/: apod4_stars.json  solution.json  test_apod4.py  test_apod4_logodds_list.py  test_astropy.py  test_astrosat.py  test_heavy.py  test_json.py  test_memory.py  test_simple.py  test_sip.py
